# 7thplacenw-client

./: .gitignore  CLAUDE.md  PROGRESS.md  PROJECT_PLAN.md  README.md
cpp/: CMakeLists.txt
cpp/dev/: DESIGN.md
csharp/: SeventhPlace.Config.sln
csharp/dev/: DESIGN.md
csharp/src/SeventhPlace.Config/: SeventhPlace.Config.csproj
csharp/tests/SeventhPlace.Config.Tests/: SeventhPlace.Config.Tests.csproj
dev/: ARCHITECTURE.md  BRIDGE.md  GOLDEN_SCHEMA.md  PORTABILITY.md  REQUIREMENTS.md  USER_NEEDS.md
go/: go.mod
go/dev/: DESIGN.md
python/: pyproject.toml
python/dev/: DESIGN.md
python/src/seventhplace/: __init__.py  errors.py  manager.py  merge.py  schema.py
python/src/seventhplace/providers/: __init__.py  cli.py  defaults.py  env.py  file.py
python/tests/: conftest.py  test_compliance.py
schema/proto/seventhplace/: config.proto  options.proto
test/: COMPLIANCE.md
test/fixtures/: full_override.yaml  invalid_enum.yaml  override_flat.yaml  override_nested.yaml  type_mismatch.yaml  unknown_keys.yaml
typescript/: package-lock.json  package.json  tsconfig.json
typescript/dev/: DESIGN.md
typescript/src/: errors.ts  index.ts  manager.ts  merge.ts  schema.ts
typescript/src/providers/: cli.ts  defaults.ts  env.ts  file.ts  index.ts
typescript/tests/: compliance.test.ts
