[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seventhplace"
version = "0.1.0"
description = "Cross-platform Layered Configuration Manager"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seventhplace"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
